--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-Hello World
+<html>
+<head>
+<tytle></tytle>
+<script>
+function start() {
+	try{
+		var first = localStorage.getItem('first');
+  		table0 = document.createElement('table');  
+	 }catch{
+  		localStorage.setItem('first', 'False');
+  		window.location.href = 'setting.html';
+ 	}		
+	}
+</script>
+<style>
+.body{
+	margin:0;
+	}
+
+.tablestyle1{
+	height:20vh;
+	width:100vw;
+	padding: 0em;
+	}
+.tablestyle2{
+	height:80vh;
+	width:100vw;
+	padding: 0em;
+	}
+.tdstyle1{
+	height:100%;
+	width:50%;
+	padding: 0em;
+	}
+.tdstyle2{
+	height:100%;
+	width:25%;
+	padding: 0em;
+	}
+.textboxstyle{
+	display: block;
+	height:100%;
+	width:100%;
+	padding: 0em 0em;
+	}
+</style>
+</head>
+<body onLoad="start();">
+<header>
+<table class="tablestyle1">
+<tr>
+<td class="tdstyle1"><input type="text" class="textboxstyle"></input></td>
+<td class="tdstyle2"><input type="text" class="textboxstyle"></input></td>
+<td class="tdstyle2"><input type="text" class="textboxstyle"></input></td>
+</tr>
+</table>
+</header>
+<iframe src="table.html" class="tablestyle2">
+</iframe>
+</body>
+</html>
