--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ function start() {
 	height:20vh;
 	width:100vw;
 	padding: 0em;
+	table-layout: fixed;
 	}
 .tablestyle2{
 	height:80vh;
@@ -34,7 +35,7 @@ function start() {
 	}
 .tdstyle2{
 	height:100%;
-	width:25%;
+	width:(50/3)%;
 	padding: 0em;
 	}
 .textboxstyle{
@@ -42,6 +43,14 @@ function start() {
 	height:100%;
 	width:100%;
 	padding: 0em 0em;
+	font-size:400%;
+	}
+.boxstyle{
+	display: block;
+	height:100%;
+	width:100%;
+	padding: 0em 0em;
+	font-size:400%;
 	}
 </style>
 </head>
@@ -52,6 +61,7 @@ function start() {
 <td class="tdstyle1"><input type="text" class="textboxstyle"></input></td>
 <td class="tdstyle2"><input type="text" class="textboxstyle"></input></td>
 <td class="tdstyle2"><input type="text" class="textboxstyle"></input></td>
+<td class="tdstyle2"><div class="boxstyle">a</div></td>
 </tr>
 </table>
 </header>
