--- a/compare.html
+++ b/compare.html
@@ -1,7 +1,8 @@
 
 <html>
 <head>
-<tytle></tytle>
+<tytle>compare</tytle>
+<meta charset="UTF-8">
 <script>
 function compare1(name){
 	var elem1 = document.getElementById("name");
