--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ function start(){
 	if (localStorage.getItem('first')=="False"){
 	}else {
 		localStorage.setItem('first',"False");
-		var newdict = {"manager":["ouprogramming",["C","N","S"],{"豚肉":[100,120,130],"牛肉":[100,120,130]}]};
+		var newdict = {"manager":["ouprogramming",["C","N","S"],{"豚肉":[0,100,120,130],"玉ねぎ":[4,100,120,130]}]};
 		localStorage.setItem('userlist', JSON.stringify(newdict));
  	}
 }
