--- a/test.html
+++ b/test.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<tytle></tytle>
+<title></title>
 <script>
 function start(){
-  var a = [1,2,3,4];
-  alert(a[1:]);
+  var a = "";
+  alert(Number(a));
 }
 </script>
 </head>
