--- a/table.html
+++ b/table.html
@@ -1,24 +1,19 @@
 <html>
 <head>
-<tytle></tytle>
+<title>table</title>
 <script>
 function btn(){
   var td = document.getElementsByTagName('td');
   for (var i=0; i < td.length; i++) {
     td[i].addEventListener('click', function() {
-      alert(this.textContent);
-      alert(this.id);
       var elemid=this.id
-      if(this.id[0]=="-"){
-        window.parent.compare1(elemid.substr(1));
-      }else{
-        window.parent.compare2(elemid);
-      }
+      window.parent.setting(elemid.substr(0,1),elemid.substr(1));
     })
   }
 }
 
 function mktable(){
+  alert("mktable")
   var table = document.createElement('table');
   var userlist = JSON.parse(localStorage.getItem('userlist'));
   var username = localStorage.getItem('currentuser');
@@ -28,8 +23,9 @@ function mktable(){
   var shoplist1 = shoplist0.filter(function( item ) {
     return item !== "";
   });
-  var nos = shoplist1.length;
-  var width1 = toString(50/nos) + "%";
+  var nos0 = shoplist0.length;
+  var nos1 = shoplist1.length;
+  var width1 = 50/nos1.toString() + "%";
   table.setAttribute("cellspacing","0");
   table.setAttribute("cellpadding","0");
   var th0 = document.createElement('th');
@@ -37,17 +33,14 @@ function mktable(){
   th0.setAttribute("class","th0style");
   var tr0 = document.createElement('tr');
   tr0.appendChild(th0);
-
-  for(var j=0; j< nos; j++){
+  for(var j=0; j< nos1; j++){
     var th = document.createElement('th');
     th.textContent = shoplist1[j];
     th.setAttribute("class","th1style");
     th.setAttribute("width",width1);
     tr0.appendChild(th);
   }
-
   table.appendChild(tr0);
-  alert(grocerylist);
   for (var i = 0; i< grocerylist.length; i++){
     var tr = document.createElement('tr');
     var td0 = document.createElement('td');
@@ -60,13 +53,17 @@ function mktable(){
       tr.setAttribute("bgcolor","#dfdfdf");
     }
     tr.appendChild(td0);
-    for(var j=0; j< nos; j++){
+    for(var j=0; j< nos0; j++){
       var td = document.createElement('td');
       td.setAttribute("class","td1style");
       td.setAttribute("width",width1);
-      td.setAttribute("id",(j).toString()+grocerylist[i]);
-      td.textContent = grocerydict[grocerylist[i]][j];
-      tr.appendChild(td);
+      td.setAttribute("id",j.toString()+grocerylist[i]);
+      td.textContent = grocerydict[grocerylist[i]][j+1];
+      if (shoplist0[j]==""){
+        ;
+      }else{
+        tr.appendChild(td);
+      }
     }
     table.appendChild(tr);
   }
