--- a/table.html
+++ b/table.html
@@ -8,7 +8,7 @@ function btn(){
     td[i].addEventListener('click', function() {
       var elemid=this.id
       alert("btn");
-      window.parent.sdirectinput(elemid.substr(0,1),elemid.substr(1));
+      window.parent.directinput(elemid.substr(0,1),elemid.substr(1));
     })
   }
 }
