--- a/table.html
+++ b/table.html
@@ -46,20 +46,20 @@ function mktable(){
     var td0 = document.createElement('td');
     td0.textContent = grocerylist[i];
     td0.setAttribute("class","td0style");
-    td0.setAttribute("id","-"+grocerylist[i]);
+    td0.setAttribute("id","0"+grocerylist[i]);
     if (i % 2 ===0){
       tr.setAttribute("bgcolor","#ffffff");
     }else{
       tr.setAttribute("bgcolor","#dfdfdf");
     }
     tr.appendChild(td0);
-    for(var j=0; j< nos0; j++){
+    for(var j=1; j<= nos0; j++){
       var td = document.createElement('td');
       td.setAttribute("class","td1style");
       td.setAttribute("width",width1);
       td.setAttribute("id",j.toString()+grocerylist[i]);
-      td.textContent = grocerydict[grocerylist[i]][j+1];
-      if (shoplist0[j]==""){
+      td.textContent = grocerydict[grocerylist[i]][j];
+      if (shoplist0[j-1]==""){
         ;
       }else{
         tr.appendChild(td);
