--- a/compare.html
+++ b/compare.html
@@ -106,6 +106,7 @@ function result(sign){
 }
 
 function update(){
+	alert("update");
 	userlist = JSON.parse(localStorage.getItem('userlist'));
   username = localStorage.getItem('currentuser');
 	userlist[username][2][currentname][currentshop] = comparablevalue;
@@ -139,6 +140,7 @@ function nameCheck(){
 	}
 }
 function register(){
+	alert("register")
 	userlist = JSON.parse(localStorage.getItem('userlist'));
   username = localStorage.getItem('currentuser');
 	basenum1 = Number(document.getElementById("num").value);
