--- a/table.html
+++ b/table.html
@@ -73,6 +73,12 @@ function rmtable(){
   document.getElementById("table").remove();
 }
 
+function color(id,font,back){
+  elemcell = document.getElementById(id);
+  elemresult.style.backgroundColor = back;
+  elemresult.style.color = font;
+}
+
 </script>
 <style>
 *{
